salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/Credit_Note_Line_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Credit Note Line Snapshot</label>
    <nameField>
        <displayFormat>CNLS-{0000000000}</displayFormat>
        <label>Credit Note Line Snapshot</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Note Line Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>