salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Note Line Snapshots</relationshipLabel>
    <relationshipName>Credit_Note_Line_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>