salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <label>Account Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>