salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Balance_0_30__c.field-meta.xml
<CustomField>
    <fullName>Balance_0_30__c</fullName>
    <formula>IF(AND(Days_Since_Credit_Note_Date__c &gt;= 0, Days_Since_Credit_Note_Date__c &lt;= 30), Line_Balance__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance 0-30</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>