salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Balance_121_180__c.field-meta.xml
<CustomField>
    <fullName>Balance_121_180__c</fullName>
    <formula>IF(AND(Days_Since_Credit_Note_Date__c &gt; 120, Days_Since_Credit_Note_Date__c &lt;= 180), Line_Balance__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance 121-180</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>