salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Balance_731_Plus__c.field-meta.xml
<CustomField>
    <fullName>Balance_731_Plus__c</fullName>
    <formula>IF(Days_Since_Credit_Note_Date__c &gt; 730, Line_Balance__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance 731 Plus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>