salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Balance_Not_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Not_Due__c</fullName>
    <formula>IF(Days_Since_Credit_Note_Date__c &lt; 0, Line_Balance__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Not Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>