salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Credit_Note_Balance__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Balance__c</fullName>
    <label>Credit Note Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>