salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Credit_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Date__c</fullName>
    <label>Credit Note Date</label>
    <type>Date</type>
</CustomField>