salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Credit_Note_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Reason__c</fullName>
    <label>Credit Note Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>