salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Days_Since_Credit_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Credit_Note_Date__c</fullName>
    <label>Days Since Credit Note Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>