salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Line_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Line_Allocations__c</fullName>
    <label>Line Allocations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>