salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Line_GL_Treatment_ID__c.field-meta.xml
<CustomField>
    <fullName>Line_GL_Treatment_ID__c</fullName>
    <label>Line GL Treatment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>