salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Line_Invoice_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Line_Invoice_Line_ID__c</fullName>
    <label>Line Invoice Line ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>