salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Line_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Invoice_Number__c</fullName>
    <label>Line Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>