salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Line_Refunds_Unallocations__c.field-meta.xml
<CustomField>
    <fullName>Line_Refunds_Unallocations__c</fullName>
    <label>Line Refunds Unallocations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>