salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Line_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Line_Start_Date__c</fullName>
    <label>Line Start Date</label>
    <type>Date</type>
</CustomField>