salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Line_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Amount__c</fullName>
    <label>Line Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>