salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Product_Body__c.field-meta.xml
<CustomField>
    <fullName>Product_Body__c</fullName>
    <label>Product Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>