salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Product_Level__c.field-meta.xml
<CustomField>
    <fullName>Product_Level__c</fullName>
    <label>Product Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>