salesforce-main/src/main/default/objects/Credit_Note_Line_Snapshot__c/fields/Product_Paper__c.field-meta.xml
<CustomField>
    <fullName>Product_Paper__c</fullName>
    <label>Product Paper</label>
    <length>255</length>
    <type>Text</type>
</CustomField>